2015-12-31  Natalia Portillo  <claunia@claunia.com>

	* Device/Constructor.cs:
	  Added support for USB on Linux.

	* Device/Variables.cs:
	  Added support for USB detection and metadata.

	* Linux/Extern.cs:
	* Linux/Command.cs:
	  Added readlink(3) support, for getting symlink destinations.

2015-12-30  Natalia Portillo  <claunia@claunia.com>

	* Device/Variables.cs:
	* Device/Constructor.cs:
	  Added an IsRemovable field.

	* Device/ScsiCommands.cs:
	  Fixed SCSI READ CAPACITY CDB size.
	Fixed READ CD-DA MSF method name.
	Implemented SCSI SEEK (6) and SEEK (10) commands.

	* Linux/Command.cs:
	* Windows/Command.cs:
	  Fixed memory leaking on unmanaged heap.

2015-12-26  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/ScsiCommands.cs:
	  Added all known READ, READ LONG, READ CD and READ CD-DA
	  commands.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Finally CD-Text on lead-in is getting decoded correctly...

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Solved when CD-TEXT is bigger than 1KiB.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Use a bigger buffer for CD-TEXT.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  On READ TOC/PMA/ATIP and READ DISC INFORMATION if trying
	  small buffer and then real-sized buffer, some drives send
	  garbage, so get a big enough buffer and return only the
	  applicable data size.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/ScsiCommands.cs:
	  Implemented SCSI READ DISC INFORMATION.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Implemented SCSI READ CAPACITY(16).

	* Enums.cs:
	  Added SCSI SERVICE ACTIONs.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Added missing documentation.

2015-11-23  Natalia Portillo  <claunia@claunia.com>
